[metadata]
name = multipartite
author = Joseph Schindler
author_email = jcschindler01@gmail.com
description = Tools for manipulating multipartite quantum systems.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/jcschindler01/skeleton
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
